--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -115,6 +115,12 @@
         "span": "cpp",
         "version": "cpp",
         "__functional_03": "cpp",
-        "regex": "cpp"
+        "regex": "cpp",
+        "charconv": "cpp",
+        "csetjmp": "cpp",
+        "cuchar": "cpp",
+        "forward_list": "cpp",
+        "numbers": "cpp",
+        "scoped_allocator": "cpp"
     }
 }
