--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "cwd": "${workspaceFolder}",
             "MIMode": "gdb",
             "externalConsole": false,
-            "program": "${workspaceFolder}/build/test.exe",
+            "program": "${workspaceFolder}/build/ITunesLibraryParser_test.exe",
             "miDebuggerPath": "${env:MINGW64_ROOT}/bin/gdb.exe",
         },
     ]
