--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,12 +19,12 @@
                 "kind": "test"
             },
             "type": "shell",
-            "command": "cmake -GNinja -Bbuild -H.",
             "windows":{
-                "args": [
-                    "-DCMAKE_TOOLCHAIN_FILE=toolchains/msys2.cmake"
-                ],
-            }
+                "command": "cmake -GNinja -Bbuild -H. -DBUILD_TESTING=1 -DCMAKE_TOOLCHAIN_FILE=toolchains/msys2.cmake",
+            },
+            "osx":{
+                "command": "cmake -GNinja -Bbuild -H. -DBUILD_TESTING=1 -DCMAKE_TOOLCHAIN_FILE=toolchains/osx.cmake",
+            },
         },
         {
             "label": "2. Build",
