--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,35 @@
 {
-    "terminal.integrated.shell.windows": "${env:MINGW64_ROOT}/../usr/bin/bash.exe",
-    "terminal.integrated.shellArgs.windows": [
-        "--login",
-        "-i"
-    ],
-    "terminal.integrated.env.windows": {
-        "MSYSTEM": "MINGW64",
-        "MSYS2_PATH_TYPE": "inherit",
-        "CHERE_INVOKING": "1",
-        "MSVSCODE": "1"
+    "terminal.integrated.profiles.windows": {
+        "PowerShell": {
+            "source": "PowerShell",
+            "icon": "terminal-powershell"
+        },
+        "Command Prompt": {
+            "path": [
+                "${env:windir}\\Sysnative\\cmd.exe",
+                "${env:windir}\\System32\\cmd.exe"
+            ],
+            "args": [],
+            "icon": "terminal-cmd"
+        },
+        "Git Bash": {
+            "source": "Git Bash"
+        },
+        "Msys2 Shell" : {
+            "path" : "${env:MINGW64_ROOT}\\..\\usr\\bin\\bash.exe",
+            "args": [        
+                "--login",
+                "-i"
+            ],
+            "env": {
+                "MSYSTEM": "MINGW64",
+                "MSYS2_PATH_TYPE": "inherit",
+                "CHERE_INVOKING": "1",
+                "MSVSCODE": "1"
+            },
+        }
     },
+    "terminal.integrated.defaultProfile.windows": "Command Prompt",
     "search.exclude": {
         "deps": true,
         "cmake": true
@@ -120,6 +140,7 @@
         "cuchar": "cpp",
         "forward_list": "cpp",
         "numbers": "cpp",
-        "scoped_allocator": "cpp"
+        "scoped_allocator": "cpp",
+        "cassert": "cpp"
     }
 }
