--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,11 +20,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    
+    - name: Install ninja-build tool
+      uses: seanmiddleditch/gha-setup-ninja@v3
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DBUILD_TESTING=1 -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_CXX_COMPILER=clang++
+      run: cmake -GNinja -B ${{github.workspace}}/build -DBUILD_TESTING=1 -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_CXX_COMPILER=clang++
 
     - name: Build
       # Build your program with the given configuration
