--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -12,11 +12,20 @@ env:
 
 jobs:
   build:
+    strategy:
+        fail-fast: false
+        matrix:
+          include:
+            - name: Windows
+              os: windows-latest
+            - name: MacOS
+              os: macOs-latest
+
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: windows-latest
+    runs-on:  ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v2
@@ -37,5 +46,5 @@ jobs:
       working-directory: ${{github.workspace}}/build/tests
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ./ITunesLibraryParser_tests.exe --benchmark-samples 1
+      run: ./ITunesLibraryParser_tests --benchmark-samples 1
       
