--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,6 +20,7 @@ jobs:
               os: windows-latest
             - name: MacOS
               os: macOs-latest
+              CXX: clang++
 
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
@@ -33,10 +34,14 @@ jobs:
     - name: Install ninja-build tool
       uses: seanmiddleditch/gha-setup-ninja@v3
 
+    - name: Expose llvm PATH for Mac
+      if: ${{ runner.os == 'macOS' }}
+      run: echo "/usr/local/opt/llvm/bin/" >> $GITHUB_PATH
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -GNinja -B ${{github.workspace}}/build -DBUILD_TESTING=1 -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_CXX_COMPILER=clang++
+      run: cmake -GNinja -B ${{github.workspace}}/build -DBUILD_TESTING=1 -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_CXX_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
 
     - name: Build
       # Build your program with the given configuration
