--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,7 +22,6 @@ jobs:
             - name: MacOS
               os: macOs-latest
               CXX: clang++
-              CMAKE_CXX_FLAGS: -Wa,-q
               
 
     # The CMake configure and build commands are platform agnostic and should work equally
@@ -45,7 +44,7 @@ jobs:
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       # still enforcing clang++ to force MacOS cmake to select LLVM's clang and not Apple
-      run: cmake -GNinja -B ${{github.workspace}}/build -DBUILD_TESTING=1 -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_CXX_FLAGS=${{ matrix.CMAKE_CXX_FLAGS }}
+      run: cmake -GNinja -B ${{github.workspace}}/build -DBUILD_TESTING=1 -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_CXX_COMPILER=clang++
 
     - name: Build
       # Build your program with the given configuration
