making sure llvm clang is used in local MacOS debugging

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,10 @@
             "program": "${workspaceFolder}/build/tests/ITunesLibraryParser_tests",
             "args": [
                 "--benchmark-samples 1"
-            ]
+            ],
+            "osx": {
+                "MIMode": "lldb"
+            },
         }
     ]
 }
