--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,7 +20,7 @@ jobs:
               os: windows-latest
               CXX: clang++
             - name: MacOS
-              os: macOs-latest
+              os: macOS-11
               CXX: clang++
               
 
