--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Debug
+  BUILD_TYPE: RelWithDebInfo
 
 jobs:
   CI:
@@ -36,9 +36,9 @@ jobs:
     - name: Install ninja-build tool
       uses: seanmiddleditch/gha-setup-ninja@v3
 
-    #- name: Expose llvm PATH for Mac
-    #  if: ${{ runner.os == 'macOS' }}
-    #  run: echo "/usr/local/opt/llvm/bin/" >> $GITHUB_PATH
+    - name: Expose llvm PATH for Mac
+      if: ${{ runner.os == 'macOS' }}
+      run: echo "/usr/local/opt/llvm/bin/" >> $GITHUB_PATH
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
