--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,10 +20,10 @@
             },
             "type": "shell",
             "windows":{
-                "command": "cmake -GNinja -Bbuild -H. -DBUILD_TESTING=1 -DCMAKE_TOOLCHAIN_FILE=toolchains/msys2.cmake",
+                "command": "cmake -GNinja -Bbuild -H. -DBUILD_TESTING=1 -DCMAKE_TOOLCHAIN_FILE=toolchains/msys2.cmake"
             },
             "osx":{
-                "command": "cmake -GNinja -Bbuild -H. -DBUILD_TESTING=1 -DCMAKE_TOOLCHAIN_FILE=toolchains/osx.cmake",
+                "command": "cmake -GNinja -Bbuild -H. -DBUILD_TESTING=1 -DCMAKE_TOOLCHAIN_FILE=toolchains/osx.cmake"
             }
         },
         {
